# attribute-recognition

./: .gitignore  CMakeLists.txt  Dataloader.cpp  Dataloader.h  Network.cpp  Network.h  README.md  Standard.h  main.cpp  main.py  recognition.ipynb
loader/: dataloader.py
